--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
+    compileSdkVersion 'android-MNC'
     buildToolsVersion "22.0.1"
 
     defaultConfig {
         applicationId "com.justinvarghesejohn.spotifystreamer"
-        minSdkVersion 15
-        targetSdkVersion 22
+        minSdkVersion 'MNC'
+        targetSdkVersion 'MNC'
         versionCode 1
         versionName "1.0"
     }
